# bunker

./: .env.example  .gitignore  CLAWDBOT_INTEGRATION.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SESSION_NOTES.md  SETUP.md  claude.md  components.json  drizzle.config.ts  index.html  package-lock.json  package.json  project-framework-v2.md  tailwind.config.js  tailwind.config.ts  vitest.config.ts
project-framework-docs/: agent-crew-spec-template.md  audit-checklist-template.md  decision-log-template.md  mts-template.md  prd-template.md  project-brief-template.md  project-pulse-template.md  ship-checklist-template.md  tad-template.md  test-plan-template.md
project-planning-docs/: 01-project-brief.md  02-prd.md  03-tad.md  04-agent-crew-spec.md  05-mts.md  06-audit-checklist.md  07-project-pulse.md  08-decision-log.md  (+2 more)
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  error.rs  keyring.rs  lib.rs  main.rs  ollama.rs  operations.rs  pty.rs  shell_security.rs  system.rs  validation.rs  vault.rs
src-tauri/src/claude/: client.rs  commands.rs  mod.rs  types.rs
src-tauri/src/cloud_router/: classifier.rs  commands.rs  mod.rs  types.rs
src-tauri/src/cloud_router/browser/: mod.rs
src-tauri/src/cloud_router/clients/: chatgpt.rs  claude.rs  mod.rs  perplexity.rs
src-tauri/src/metrics/: commands.rs  mod.rs  types.rs
src-tauri/src/terminal/: commands.rs  mod.rs  pty.rs
src-tauri/src/tools/: commands.rs  file_ops.rs  mod.rs  registry.rs  terminal.rs  types.rs
(+271 files in other folders)
